// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextMessageDialog /> should render the actions 1`] = `
<BasicDialog
  actions={
    [
      {
        "action": [Function],
        "label": "fooAction",
      },
    ]
  }
  title="This is the title."
>
  <span
    dangerouslySetInnerHTML={
      {
        "__html": "This is the message.",
      }
    }
  />
</BasicDialog>
`;

exports[`<TextMessageDialog /> should render with minimal props 1`] = `
<BasicDialog
  actions={[]}
  title={null}
>
  <span
    dangerouslySetInnerHTML={
      {
        "__html": "This is the message.",
      }
    }
  />
</BasicDialog>
`;

exports[`<TextMessageDialog /> should render with title and message 1`] = `
<BasicDialog
  actions={[]}
  title="This is the title."
>
  <span
    dangerouslySetInnerHTML={
      {
        "__html": "This is the message.",
      }
    }
  />
</BasicDialog>
`;

exports[`<TextMessageDialog /> should render with title, message and messageParams 1`] = `
<BasicDialog
  actions={[]}
  title="This is the title."
>
  <span
    dangerouslySetInnerHTML={
      {
        "__html": "Message with {name}",
      }
    }
  />
</BasicDialog>
`;
